--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyectocardstokens",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./SRC/index.js",
   "scripts": {
     "dev": "nodemon ./SRC/index.js",
     "start": "node ."
